# iac_examples

./: .gitignore  README.md
my_awscdk/: Dockerfile  README.md
my_awscdk/app/: pyproject.toml
my_awscdk/app/src/: README.md  app.py  cdk.context.json
my_awscdk/app/src/code/: src_stack.py
my_awscdk/app/src/tests/unit/: test_src_stack.py
mypulumi/: Dockerfile  README.md  env_example
mypulumi/app/: pyproject.toml
mypulumi/app/src/: Pulumi.yaml  __main__.py  httpd.sh
terraform_hcl/: README.md
terraform_hcl/src/: .terraform.lock.hcl  alb.tf  autoscaling_group.tf  gateway.tf  launch_configuration.tf  main.tf  security_groups.tf  subnets.tf  target_group.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
