[tool.poetry]
name = "mypulumi"
version = "0.1.0"
description = ""
authors = ["Noemi Kowalewska <noemi.kowalewska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.34.1"
pulumi-aws = "^5.8.0"
pulumi-awsx = "^1.0.0-beta.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
